<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_centerInParent="true"
    	android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            xmlns:android="http://schemas.android.com/apk/res/android" xmlns:android1="http://schemas.android.com/apk/res/android">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#66ff5722"
            android:gravity="center"
            android:text="@string/textView1"
            android:textColor="#fff"
            android:textSize="20sp" />
    
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="104dp"
            android:layout_height="90dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:contentDescription="@string/desc"
            android:src="@drawable/prima"
            android:scaleType="fitXY" />
                      
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtStatus"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mybutton"
            android:bottomLeftRadius="60dp"
            android:bottomRightRadius="60dp"
            android:text="@string/btnLogin"
            android:topLeftRadius="60dp"
            android:topRightRadius="60dp" />


        <EditText
            android:id="@+id/txtPass"
            android:focusableInTouchMode="true" 
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_above="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp"
            android:background="#80f0f8ff"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txtPass"
            android:minHeight="40dp"
            android:singleLine="true"
            android:inputType="textPassword"
           />

        <ImageView
            android:id="@+id/imageview2"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:clickable="false"
            android:contentDescription="@string/desc"
            android:src="@drawable/prima2"
            android:scaleType="fitXY" />

        <EditText
            android:id="@+id/txtStatus"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageview2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="center_horizontal|center"
            android:hint="@string/txtStatus"
            android:inputType="none" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_above="@+id/txtPass"
            android:layout_alignLeft="@+id/txtPass"
            android:layout_marginBottom="20dp"
            android:background="#80f0f8ff"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/txtUser"
            android:inputType="text"
            android:minHeight="40dp"
            android1:singleLine="true" >

            
        </EditText>
       
    </RelativeLayout>

